--- a/indexs.html
+++ b/indexs.html
@@ -21,7 +21,7 @@
 				<span>階ごと教室展示案内</span>
 			</div>
 			<div class="flower">
-				<a href="" >1F<span class="1F">光の庭 野外ステージ</span></a><br>
+				<a href="floor1.html" >1F<span class="1F">光の庭 野外ステージ</span></a><br>
 				<a href="" >2F<span class="2F">普通科３年生教室</span></a><br>
 				<a href="" >3F<span class="3F">普通科２年生教室　専門科３年生教室</span></a><br>
 				<a href="" >4F<span class="4F">普通科１年生教室</span></a><br>
