--- a/floor1s.html
+++ b/floor1s.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>MeidenFestival</title>
-<link href="floor1.css" rel="stylesheet">
+<link href="floor1s.css" rel="stylesheet">
 </head>
 
 <body>
